#1 Add Spring Security and Security Test to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
+    	<!-- Base dependencies -->
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -35,6 +40,8 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        
+        <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -45,6 +52,10 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-test</artifactId>
         </dependency>
     </dependencies>
 
