--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,18 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
-    	<!-- Base dependencies -->
-        <dependency>
+    	<!-- Security -->
+    	<dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+        
+    	<!-- Base dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
