--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,20 @@
         	<groupId>org.springframework.security</groupId>
         	<artifactId>spring-security-test</artifactId>
         </dependency>
+        
+        <!-- New -->
+        <dependency>
+        	<groupId>org.springframework.ldap</groupId>
+        	<artifactId>spring-ldap-core</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-ldap</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>com.unboundid</groupId>
+        	<artifactId>unboundid-ldapsdk</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
